2004-07-21  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b48

	* Change: show "highlight" under images when logged in as an admin
		if the image is a highlight

2004-07-20  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.5-cvs-b47

	* Merged in changes made to 1.4.4 branch, except for what ckdake
	  already merged (thanks ckdake).
	* Fixed applets when Gallery is embedded in phpBB2.


2004-07-20  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b46
                                                                                                    
        * Change: Users can specificy a mail server to use other than
		one running on the local machine.

2004-07-20  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b45

	* Change: When editing captions, provide a popup for each image to 
		show the sized image

2004-07-20  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.5-cvs-b44

	* Fix: hidden albums are now indicated as such in fetch-album-images
	  (GR protocol)

2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b43

	* Change: Add 'alternate' link to the header if RSS is enabled

2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b42

	* Change: Check for fitToWindow before outputting the 'onclick'
	  attribute in view_photo.

2004-07-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b41

	* Change: Unglobalize login.php

2004-07-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b40

	* Change: Since we no longer do shutterfly donations, 
	  $gallery->app->default["print_photos"] can end up being ""
	  which causes the key() in view_photo to fail.  This prevents
	  the error message from key() and prevents printing of a blank
	  print href.

2004-07-19 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b39

	* Change: New variable to pull the thumsize to create a 
		  defaultwidth and height for the divCell to align everything up.

2004-07-19 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b38
