@@ -1,3 +1,9 @@
+2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b49
+
+	* Change: getRequestVar, getEnvVar, getFilesVar now accept string arrays
+
+	* Change: Correct the default value for the new SMTP option
+
 2004-07-21  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b48
 
 	* Change: show "highlight" under images when logged in as an admin
